--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -283,6 +283,11 @@
             android:defaultValue="@null"
             app:argType="com.travisit.travisitbusiness.model.Branch"
             app:nullable="true"/>
+        <argument
+            android:name="location"
+            app:argType="com.google.android.gms.maps.model.LatLng"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/mapsFragment"
@@ -295,7 +300,8 @@
             app:enterAnim="@anim/slide_from_out_right_to_center"
             app:exitAnim="@anim/slide_from_center_to_out_left"
             app:popUpTo="@id/app_nav_graph"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true">
+        </action>
     </fragment>
 
 </navigation>
