--- a/app/src/main/res/layout/fragment_offer_details.xml
+++ b/app/src/main/res/layout/fragment_offer_details.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
     tools:context=".vvm.destination.OfferDetailsFragment">
-
     <!-- Back Arrow -->
     <ImageView
         android:id="@+id/f_offer_details_iv_back"
@@ -85,6 +84,7 @@
         android:layout_height="30dp"
         android:layout_marginEnd="10dp"
         android:padding="5dp"
+        android:visibility="invisible"
         android:src="@drawable/ic_share"
         app:layout_constraintEnd_toEndOf="@id/f_offer_details_iv_options"
         app:layout_constraintTop_toBottomOf="@id/f_offer_details_sdv_1"
@@ -95,7 +95,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginEnd="10dp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:src="@drawable/ic_favourite"
         android:background="@drawable/ic_favourite_background"
         android:tint="@color/colorWhite"
@@ -207,4 +207,15 @@
         android:layout_marginStart="5dp"
         android:textColor="@color/colorRatingSaffron"
         android:textSize="20sp"/>
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <include
+            android:id="@+id/f_offer_details_comments"
+            layout="@layout/bottom_sheet_comments" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
