--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,14 +1,260 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".vvm.destination.AccountFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+    <!-- Business Logo -->
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/f_account_sdv_logo"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="15dp"
+        app:actualImageResource="@drawable/dummy_logo"
+        app:actualImageScaleType="centerInside"
+        app:roundingBorderColor="@color/colorBorderSummerSky"
+        app:roundingBorderWidth="1dp"
+        android:layout_marginTop="10dp"
+        app:roundedCornerRadius="35dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+    <!-- Business Name -->
     <TextView
+        android:id="@+id/f_account_tv_business_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/f_account_sdv_logo"
+        app:layout_constraintTop_toTopOf="@id/f_account_sdv_logo"
+        app:layout_constraintBottom_toBottomOf="@id/f_account_sdv_logo"
+        tools:text="Smth Hotel"
+        android:layout_marginStart="20dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/segoeui_font"
+        android:textColor="@color/colorHeaderBlack" />
+    <ScrollView
+        android:id="@+id/f_account_sv_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/f_account_sdv_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="15dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <!-- First Block -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/f_account_cv_one"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:elevation="4dp"
+                app:cardCornerRadius="8dp"
+                android:backgroundTint="@color/colorAccountCard"
+                app:cardUseCompatPadding="true">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <!-- Profile Material Button -->
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/f_account_mtbtn_profile"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:enabled="true"
+                        android:fontFamily="@font/segoeui_font"
+                        android:text="@string/profile"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorAccountItems"
+                        android:textSize="18sp"
+                        app:icon="@drawable/ic_filled_profile"
+                        app:iconGravity="textStart"
+                        app:iconPadding="20dp"
+                        app:iconTint="@color/colorGreenMessage"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                    <!-- Account Settings Material Button -->
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/f_account_mtbtn_account_settings"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:enabled="true"
+                        android:fontFamily="@font/segoeui_font"
+                        android:text="@string/account_settings"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorAccountItems"
+                        android:textSize="18sp"
+                        app:icon="@drawable/ic_account_settings"
+                        app:iconGravity="textStart"
+                        app:iconPadding="20dp"
+                        app:iconTint="@color/colorGreenMessage"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                    <!-- Business Dashboard Material Button -->
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/f_account_mtbtn_business_dashboard"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:enabled="true"
+                        android:fontFamily="@font/segoeui_font"
+                        android:text="@string/business_dashboard"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorAccountItems"
+                        android:textSize="18sp"
+                        app:icon="@drawable/ic_business_dashboard"
+                        app:iconGravity="textStart"
+                        app:iconPadding="20dp"
+                        app:iconTint="@color/colorGreenMessage"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                    <!-- Logout Material Button -->
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/f_account_mtbtn_logout"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:enabled="true"
+                        android:fontFamily="@font/segoeui_font"
+                        android:text="@string/log_out"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorAccountItems"
+                        android:textSize="18sp"
+                        app:icon="@drawable/ic_logout"
+                        app:iconGravity="textStart"
+                        app:iconPadding="20dp"
+                        app:iconTint="@color/colorGreenMessage"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+            <!-- Second Block -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/f_account_cv_two"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:elevation="4dp"
+                app:cardCornerRadius="8dp"
+                android:backgroundTint="@color/colorAccountCard"
+                app:cardUseCompatPadding="true">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <!-- About us Material Button -->
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/f_account_mtbtn_about_us"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:enabled="true"
+                        android:fontFamily="@font/segoeui_font"
+                        android:text="@string/about_us"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorAccountItems"
+                        android:textSize="18sp"
+                        app:icon="@drawable/ic_info"
+                        app:iconGravity="textStart"
+                        app:iconPadding="20dp"
+                        app:iconTint="@color/colorGreenMessage"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                    <!-- About Travisit Material Button -->
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/f_account_mtbtn_about_travisit"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:enabled="true"
+                        android:fontFamily="@font/segoeui_font"
+                        android:text="@string/about_travisit_business"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorAccountItems"
+                        android:textSize="18sp"
+                        app:icon="@drawable/ic_info"
+                        app:iconGravity="textStart"
+                        app:iconPadding="20dp"
+                        app:iconTint="@color/colorGreenMessage"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                    <!-- Privacy Policy Material Button -->
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/f_account_mtbtn_privacy_policy"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:enabled="true"
+                        android:fontFamily="@font/segoeui_font"
+                        android:text="@string/privacy_policy"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorAccountItems"
+                        android:textSize="18sp"
+                        app:icon="@drawable/ic_secure"
+                        app:iconGravity="textStart"
+                        app:iconPadding="20dp"
+                        app:iconTint="@color/colorGreenMessage"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                    <!-- Share App Material Button -->
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/f_account_mtbtn_share"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:enabled="true"
+                        android:fontFamily="@font/segoeui_font"
+                        android:text="@string/share_app"
+                        android:textAllCaps="false"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/colorAccountItems"
+                        android:textSize="18sp"
+                        app:icon="@drawable/ic_share"
+                        app:iconGravity="textStart"
+                        app:iconPadding="20dp"
+                        app:iconTint="@color/colorGreenMessage"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                    <!-- Rate App Material Button -->
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/f_account_mtbtn_rate"
+                        style="@style/Widget.MaterialComponents.Button.TextButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:enabled="true"
+                        android:fontFamily="@font/segoeui_font"
+                        android:text="@string/rate_app"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorAccountItems"
+                        android:textSize="18sp"
+                        app:icon="@drawable/ic_rate"
+                        app:iconGravity="textStart"
+                        app:iconPadding="20dp"
+                        app:iconTint="@color/colorGreenMessage"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
-</FrameLayout>
+    </ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
