--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -75,7 +75,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/f_forgot_password_til_email_address" />
-    <!--  Go to sign in page  -->
+    <!--  Go to code page  -->
     <TextView
         android:id="@+id/f_forgot_password_tv_go_to_code_page"
         android:layout_width="wrap_content"
@@ -87,6 +87,5 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/f_forgot_password_btn_send_code"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="Already have an account? Sign in" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
