--- a/app/src/main/res/layout/fragment_reset_password_code.xml
+++ b/app/src/main/res/layout/fragment_reset_password_code.xml
@@ -77,6 +77,7 @@
         android:textAllCaps="false"
         android:textColor="@color/colorWhite"
         android:textSize="20sp"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
