--- a/app/src/main/res/layout/layout_active_search_bar.xml
+++ b/app/src/main/res/layout/layout_active_search_bar.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="5dp"
-    app:layout_constraintTop_toBottomOf="@+id/f_home_civ_logo">
+    android:layout_marginStart="15dp"
+    android:layout_marginEnd="15dp"
+    app:layout_constraintTop_toBottomOf="@+id/f_home_sdv_logo">
     <EditText
         android:id="@+id/layout_search_bar_et_search"
         android:drawableStart="@drawable/ic_search"
