--- a/app/src/main/res/layout/layout_inactive_search_bar.xml
+++ b/app/src/main/res/layout/layout_inactive_search_bar.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
-    app:layout_constraintTop_toBottomOf="@+id/f_home_civ_logo">
+    android:layout_marginStart="15dp"
+    android:layout_marginEnd="15dp"
+    app:layout_constraintTop_toBottomOf="@+id/f_home_sdv_logo">
 
     <!-- Search Bar Edit Text-->
     <TextView
