--- a/app/src/main/res/menu/menu_options.xml
+++ b/app/src/main/res/menu/menu_options.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/edit_option"
-        android:title="Edit"/>
+        android:title="@string/edit_option"/>
     <item
         android:id="@+id/delete_option"
-        android:title="Delete"/>
+        android:title="@string/delete_options"/>
 </menu>
