--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,7 +44,12 @@
         <item name="fontFamily">@font/segoeui_font</item>
         <item name="android:textColorHint">@color/colorPlaceholderLightGrey</item>
     </style>
-
+    <style name="customFilledExposedDropDown" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">
+        <item name="boxBackgroundColor">#f5f5f5</item>
+        <item name="android:strokeColor">@color/colorGreenMessage</item>
+        <item name="hintTextColor">@color/colorPlaceholderGrey</item>
+        <item name="colorControlActivated">@color/colorGreenMessage</item>
+    </style>
     <style name="customPopupMenuStyle" parent="Widget.MaterialComponents.PopupMenu">
         <item name="colorOnBackground">@color/colorWhite</item>
         <item name="android:textColor">@color/colorPlaceholderLightGrey</item>
