--- a/app/src/main/res/layout/fragment_branch_management.xml
+++ b/app/src/main/res/layout/fragment_branch_management.xml
@@ -75,6 +75,8 @@
             android:fontFamily="@font/opensans_light_font"
             android:maxLines="1"
             android:paddingStart="10dp"
+            android:focusableInTouchMode="false"
+            android:focusable="false"
             android:paddingEnd="10dp"
             android:textColor="@color/colorValueGrey" />
     </com.google.android.material.textfield.TextInputLayout>
