--- a/app/src/main/res/layout/fragment_offer_management.xml
+++ b/app/src/main/res/layout/fragment_offer_management.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,6 +22,19 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/offer_edit_header" />
     <!-- Pictures Header -->
+  <!--  <TextView
+        android:id="@+id/f_offer_management_tv_pictures"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/segoeui_font"
+        android:textColor="@color/colorHeaderBlack"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/f_offer_management_tv_title"
+        tools:text="@string/offer_pictures" />-->
     <TextView
         android:id="@+id/f_offer_management_tv_pictures"
         android:layout_width="wrap_content"
@@ -33,7 +47,7 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/f_offer_management_tv_title"
-        tools:text="@string/offer_pictures" />
+        android:text="Picture"/>
     <!-- Offer Image 1-->
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/f_offer_management_sdv_1"
@@ -92,7 +106,6 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:textColor="@color/colorValueGrey" />
-
     </com.google.android.material.textfield.TextInputLayout>
     <!-- Offer Description -->
     <com.google.android.material.textfield.TextInputLayout
@@ -187,9 +200,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="false"
+            android:fontFamily="@font/opensans_light_font"
             android:importantForAutofill="no"
             android:inputType="none"
-            android:fontFamily="@font/opensans_light_font"
             android:textColor="@color/colorValueGrey" />
     </com.google.android.material.textfield.TextInputLayout>
     <!-- Tags Header -->
@@ -204,31 +217,15 @@
         app:layout_constraintStart_toStartOf="@id/f_offer_management_til_title"
         app:layout_constraintTop_toBottomOf="@id/f_offer_management_til_branch" />
     <!-- Tags Search -->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/f_offer_management_til_search_tags"
-        style="@style/customGreenUnFilledBox"
+    <View
+        android:id="@+id/horizontalGuidlines"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0.01dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
-        android:hint="@string/hint_search_tags"
-        app:boxStrokeColor="@color/colorGreenMessage"
-        app:hintTextColor="@color/colorPlaceholderGrey"
-        app:layout_constraintTop_toBottomOf="@id/f_offer_management_tv_tags">
+        android:background="@color/colorWhite"
+        app:layout_constraintTop_toBottomOf="@id/f_offer_management_tv_tags"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/f_offer_management_tiet_search_tags"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_light_font"
-            android:imeOptions="actionSearch"
-            android:inputType="text"
-            android:maxLines="1"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:textColor="@color/colorValueGrey"
-            app:boxStrokeColor="@color/colorGreenMessage" />
-    </com.google.android.material.textfield.TextInputLayout>
     <!-- Tags RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/f_offer_management_rv_tags"
@@ -238,7 +235,7 @@
         android:layout_marginEnd="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/f_offer_management_tv_tags"
-        app:layout_constraintTop_toBottomOf="@id/f_offer_management_til_search_tags"
+        app:layout_constraintTop_toBottomOf="@id/horizontalGuidlines"
         tools:listitem="@layout/item_green_chip" />
     <!-- Save Button -->
     <com.google.android.material.button.MaterialButton
@@ -247,6 +244,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginEnd="28dp"
+        android:alpha="0.5"
         android:backgroundTint="@color/colorGreenMessage"
         android:fontFamily="@font/segoeui_bold_font"
         android:paddingTop="5dp"
@@ -255,8 +253,8 @@
         android:textColor="@color/colorWhite"
         android:textSize="20sp"
         app:cornerRadius="20dp"
-        android:alpha="0.5"
         app:layout_constraintTop_toBottomOf="@id/f_offer_management_rv_tags"
         tools:text="Save" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
