--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_nav_graph"
-    app:startDestination="@id/splashFragment">
+    app:startDestination="@id/branchManagementFragment">
     <action
         android:id="@+id/action_to_add_offer"
         app:destination="@id/offerManagementFragment"
@@ -364,11 +364,53 @@
             android:defaultValue="@null"
             app:argType="com.travisit.travisitbusiness.model.Branch"
             app:nullable="true"/>
+        <argument
+            android:name="location"
+            app:argType="com.google.android.gms.maps.model.LatLng"
+            app:nullable="true"
+            android:defaultValue="@null" />
+        <action
+            android:id="@+id/action_branch_to_map"
+            app:destination="@id/mapsFragment"
+            app:enterAnim="@anim/slide_from_out_right_to_center"
+            app:exitAnim="@anim/slide_from_center_to_out_left"
+            app:popUpTo="@id/app_nav_graph"
+            app:popUpToInclusive="true">
+        </action>
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.travisit.travisitbusiness.vvm.destination.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
-
+    <fragment
+        android:id="@+id/editBranchFragment"
+        android:name="com.travisit.travisitbusiness.vvm.destination.EditBranchFragment"
+        android:label="fragment_edit_branch"
+        tools:layout="@layout/fragment_edit_branch" >
+        <argument
+            android:name="branch"
+            android:defaultValue="@null"
+            app:argType="com.travisit.travisitbusiness.model.Branch"
+            app:nullable="true"/>
+    </fragment>
+    <fragment
+        android:id="@+id/mapsFragment"
+        android:name="com.travisit.travisitbusiness.vvm.destination.MapsFragment"
+        android:label="fragment_maps"
+        tools:layout="@layout/fragment_maps" >
+        <action
+            android:id="@+id/action_map_to_branch"
+            app:destination="@id/branchManagementFragment"
+            app:enterAnim="@anim/slide_from_out_right_to_center"
+            app:exitAnim="@anim/slide_from_center_to_out_left"
+            app:popUpTo="@id/app_nav_graph"
+            app:popUpToInclusive="true">
+            <argument
+                android:name="location"
+                app:argType="com.google.android.gms.maps.model.LatLng"
+                app:nullable="true"
+                android:defaultValue="@null" />
+        </action>
+    </fragment>
 </navigation>
