--- a/app/src/main/res/drawable/ic_star.xml
+++ b/app/src/main/res/drawable/ic_star.xml
@@ -1,10 +1,21 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="8.788dp"
-    android:height="8.161dp"
-    android:viewportWidth="8.788"
-    android:viewportHeight="8.161">
+    android:width="512.736dp"
+    android:height="512.736dp"
+    android:viewportWidth="512.736"
+    android:viewportHeight="512.736">
   <path
-      android:pathData="M5.864,2.849a0.356,0.356 0,0 1,-0.339 -0.239l-0.791,-2.371a0.361,0.361 0,0 0,-0.679 0L3.264,2.61a0.356,0.356 0,0 1,-0.339 0.239L0.356,2.849a0.348,0.348 0,0 0,-0.338 0.234,0.34 0.34,0 0,0 0.127,0.387l2.084,1.475a0.337,0.337 0,0 1,0.128 0.383l-0.794,2.382a0.342,0.342 0,0 0,0.053 0.312,0.354 0.354,0 0,0 0.288,0.139 0.36,0.36 0,0 0,0.21 -0.068l2.069,-1.464a0.368,0.368 0,0 1,0.422 0l2.069,1.464a0.36,0.36 0,0 0,0.21 0.068,0.354 0.354,0 0,0 0.288,-0.139 0.342,0.342 0,0 0,0.053 -0.312l-0.794,-2.382a0.337,0.337 0,0 1,0.128 -0.383L8.643,3.47a0.34,0.34 0,0 0,0.127 -0.387,0.348 0.348,0 0,0 -0.338,-0.234Z"
-      android:fillColor="#fcbc26"
-      android:fillType="evenOdd"/>
+      android:pathData="M238,512.736c0,-76.8 -128.544,-205.344 -205.344,-205.344c76.8,0 205.344,-128.544 205.344,-205.344c0,76.8 128.544,205.344 205.344,205.344C366.544,307.392 238,435.936 238,512.736z"
+      android:fillColor="#FFD83B"/>
+  <path
+      android:pathData="M238,388.272c0,-30.24 -50.64,-80.88 -80.88,-80.88c30.24,0 80.88,-50.64 80.88,-80.88c0,30.24 50.64,80.88 80.88,80.88C288.624,307.392 238,358.016 238,388.272z"
+      android:fillColor="#F3C432"/>
+  <path
+      android:pathData="M381.168,226.512c0,-36.992 -61.92,-98.912 -98.912,-98.912c36.992,0 98.912,-61.92 98.912,-98.912c0,36.992 61.92,98.912 98.912,98.912C443.088,127.6 381.168,189.52 381.168,226.512z"
+      android:fillColor="#FFD83B"/>
+  <path
+      android:pathData="M92.976,505.36c0,-19.056 -31.888,-50.944 -50.944,-50.944c19.056,0 50.944,-31.888 50.944,-50.944c0,19.056 31.888,50.944 50.944,50.944C124.864,454.432 92.976,486.32 92.976,505.36z"
+      android:fillColor="#FFD83B"/>
+  <path
+      android:pathData="M158.688,141.408c0,-26.448 -44.256,-70.704 -70.704,-70.704c26.448,0 70.704,-44.256 70.704,-70.704c0,26.448 44.256,70.704 70.704,70.704C202.944,70.704 158.688,114.96 158.688,141.408z"
+      android:fillColor="#FFD83B"/>
 </vector>
