--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,4 +49,6 @@
     <color name="colorAccountCard">#F4FEF8</color>
     <color name="colorNumbers">#575757</color>
     <color name="colorNumberLabels">#A4A4A4</color>
+    <color name="commentText">#EEEEEE</color>
+    <color name="point">#F82181</color>
 </resources>
